# cpp-project-template

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
app/: CMakeLists.txt  config.h.in
app/app/: main.cpp
lib/: CMakeLists.txt
lib/lib/: lib.cpp  lib.hpp
